--- a/package.json
+++ b/package.json
@@ -1,15 +1,15 @@
 {
   "name": "otter",
-  "version": "1.0.0",
+  "version": "0.0.0",
   "description": "",
-  "main": "./dist/index.js",
+  "main": "lib/index.js",
   "scripts": {
-    "build-ts": "tsc",
-    "build-docker": "docker build -t otter .",
-    "build": "npm run build-ts && npm run lint && npm run build-docker",
-    "server": "docker run -d --env-file .env otter",
-    "lint": "eslint ./src/**/*.ts --fix",
-    "watch-ts": "tsc -w"
+    "test": "nyc --extension .ts mocha --forbid-only \"test/**/*.test.ts\"",
+    "lint": "eslint ./src/**/*.ts",
+    "build": "npm run lint && tsc",
+    "start": "npm run build && node lib/index",
+    "docker-build": "npm run build && docker build -t otter .",
+    "docker-start": "npm run docker-build && docker run -d --env-file .env otter"
   },
   "repository": {
     "type": "git",
@@ -23,16 +23,19 @@
   "homepage": "https://github.com/RyoshiKayo/Otter#readme",
   "devDependencies": {
     "@types/node": "10.17.27",
+    "babel-eslint": "^10.1.0",
     "eslint": "^7.20.0",
     "eslint-config-prettier": "^8.1.0",
     "eslint-plugin-prettier": "^3.3.1",
     "prettier": "^2.2.1",
-    "ts-jest": "^26.2.0",
     "ts-node": "^9.0.0",
     "typescript": "~3.9.7"
   },
   "dependencies": {
+    "aws-embedded-metrics": "^2.0.4",
     "discord.js": "^12.5.1",
-    "dotenv": "^8.2.0"
+    "discord.js-commando": "^0.12.2",
+    "dotenv": "^8.2.0",
+    "tslib": "^1.14.1"
   }
 }
