--- a/package.json
+++ b/package.json
@@ -4,10 +4,11 @@
   "description": "",
   "main": "lib/index.js",
   "scripts": {
+    "ddb-prov-hack": "mkdir -p ./lib/providers; cp ./src/providers/dynamodb.js ./lib/providers/dynamodb.js",
     "test": "nyc --extension .ts mocha --forbid-only \"test/**/*.test.ts\"",
     "lint": "eslint ./src/**/*.ts",
     "build": "npm run lint && tsc",
-    "start": "npm run build && node lib/index",
+    "start": "npm run build && npm run ddb-prov-hack && node lib/index",
     "docker-build": "npm run build && docker build -t otter .",
     "docker-start": "npm run docker-build && docker run -d --env-file .env otter"
   },
@@ -33,9 +34,11 @@
   },
   "dependencies": {
     "aws-embedded-metrics": "^2.0.4",
+    "aws-sdk": "^2.865.0",
     "discord.js": "^12.5.1",
     "discord.js-commando": "^0.12.2",
     "dotenv": "^8.2.0",
-    "tslib": "^1.14.1"
+    "tslib": "^1.14.1",
+    "winston": "^3.3.3"
   }
 }
