Add logging and implement DDB settings provider

--- a/.env.example
+++ b/.env.example
@@ -1,3 +1,7 @@
 DISCORD_BOT_PREFIX=od!
 DISCORD_BOT_OWNER=132266422679240704
 DISCORD_BOT_TOKEN=
+AWS_DEFAULT_REGION=us-west-2
+AWS_ACCESS_KEY_ID=
+AWS_SECRET_ACCESS_KEY=
+GUILD_SETTINGS_TABLE_NAME=
