--- a/tsconfig.json
+++ b/tsconfig.json
@@ -10,12 +10,9 @@
     "declaration": true,
     "importHelpers": true,
     "composite": true,
-    "esModuleInterop": true
+    "esModuleInterop": true,
+    "experimentalDecorators": true
   },
-  "include": [
-    "src/**/*"
-  ],
-  "exclude": [
-    "node_modules/*"
-  ]
+  "include": ["src/**/*"],
+  "exclude": ["node_modules/*"]
 }
