--- a/package.json
+++ b/package.json
@@ -7,10 +7,10 @@
     "ddb-prov-hack": "mkdir -p ./lib/providers; cp ./src/providers/dynamodb.js ./lib/providers/dynamodb.js",
     "test": "nyc --extension .ts mocha --forbid-only \"test/**/*.test.ts\"",
     "lint": "eslint ./src/**/*.ts",
-    "build": "npm run lint && tsc && npm run ddb-prov-hack",
-    "start": "npm run build && node lib/index",
-    "docker-build": "npm run build && docker build -t otter .",
-    "docker-start": "npm run docker-build && docker run -d --env-file .env otter"
+    "prestart": "npm run lint && tsc && npm run ddb-prov-hack",
+    "prestart:docker": "npm run build && docker build -t otter .",
+    "start": "node lib/index",
+    "start:docker": "npm run docker-build && docker run -d --env-file .env otter"
   },
   "repository": {
     "type": "git",
@@ -23,6 +23,7 @@
   },
   "homepage": "https://github.com/RyoshiKayo/Otter#readme",
   "devDependencies": {
+    "@types/dynamodb-lock-client": "../DefinitelyTyped/types/dynamodb-lock-client",
     "@types/node": "10.17.27",
     "babel-eslint": "^10.1.0",
     "eslint": "^7.20.0",
@@ -33,11 +34,15 @@
     "typescript": "~3.9.7"
   },
   "dependencies": {
+    "@types/async": "^3.2.5",
+    "async": "^3.2.0",
     "aws-embedded-metrics": "^2.0.4",
     "aws-sdk": "^2.865.0",
+    "delay": "^5.0.0",
     "discord.js": "^12.5.1",
     "discord.js-commando": "^0.12.2",
     "dotenv": "^8.2.0",
+    "dynamodb-lock-client": "^0.7.2",
     "tslib": "^1.14.1",
     "winston": "^3.3.3"
   }
